--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 mongo_connection="mongodb+srv://basutulsyan710:Leet%4012code@cluster0.eelpazi.mongodb.net/recipesDB?retryWrites=true&w=majority"
+JWT_SECRET="unplaced"
